XB-24: fix main text-align and chat vh

--- a/skillsharing/pages/Chat/ui/Chat.scss
+++ b/skillsharing/pages/Chat/ui/Chat.scss
@@ -33,7 +33,7 @@
         @include phones {
             padding: 0;
             position: fixed;
-            height: 100vh;
+            height: 100%;
             top: 0;
             left: 0;
             background-color: white;
