--- a/skillsharing/widgets/Header/ui/Header.scss
+++ b/skillsharing/widgets/Header/ui/Header.scss
@@ -1,3 +1,9 @@
+@mixin phones {
+    @media screen and (width <= 800px) {
+        @content;
+    }
+}
+
 .header {
     display: flex;
     flex-direction: row;
@@ -8,6 +14,10 @@
     align-items: center;
     background-color: rgba(217, 217, 217, 0.4);
     min-height: 64px;
+
+    @include phones {
+        padding: 10px;
+    }
 
     &_none-user {
         justify-content: start;
