--- a/skillsharing/widgets/MainContent/MainContent.scss
+++ b/skillsharing/widgets/MainContent/MainContent.scss
@@ -22,6 +22,7 @@
             flex-grow: 1;
             align-items: center;
             justify-content: center;
+            text-align: center;
             font-size: 20px;
             font-family: 'Inter';
             color: #00000073;
